static/styles/index.css
@font-face {
  font-family: "EnceladusReg";
  src: url("../EnceladusRegular-d9xyE.otf");
}
@font-face {
  font-family: "EnceladusBold";
  src: url("../fonts/EnceladusBold-7BrER.otf");
}
@font-face {
  font-family: "EnceladusDemiBold";
  src: url("../fonts/EnceladusDemibold-mL18a.otf");
}

@keyframes fadedown {
  from {
    margin-top: -50px;
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes elevate {
  from {
    border: none;
  }
  to {
    border: 2px solid black;
  }
}

/* These lines below shouldn't change */

body {
  padding: 0;
  margin: 0;
  font-family: "EnceladusBold";
  height: 100%;
  width: 100%;
  background-color: rgb(18, 18, 18);
  color: rgb(255, 255, 255, 0.85);
}

.top-image {
  opacity: 0.6;
  width: 100%;
  height: 450px;
  object-fit: cover;
  position: absolute;
}

.name-container {
  height: 450px;
  position: relative;
  width: 100%;
}

.name {
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  animation: fadedown 1s ease-out forwards;
}

.name p,
.name i {
  margin: 0;
  font-family: "EnceladusBold";
}

.name p {
  font-size: 50px;
}

.name i {
  font-size: larger;
}

.intro {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.title {
  text-align: center;
  font-size: 20px;
  font-family: "EnceladusBold";
}

.languages,
.interests,
.self,
.about-me,
.present-work,
.future-work,
.past-work {
  opacity: 0;
  font-size: 25px;
}

#pwp1 {
  margin: 0;
  width: 75%;
}

.languages,
.interests,
.self {
  width: 30%;
  text-align: center;
}

.languages,
.interests {
  animation: fadedown 1s ease-in 2s forwards;
}

.self-picture {
  display: grid;
  opacity: 0;
  width: 540px;
  align-self: center;
  grid-template-columns: 100px 340px 100px;
  grid-template-rows: 340px;
  animation: fadedown 1s ease-in 1s forwards;
}

#picture-of-me {
  border: 4px rgba(18, 18, 18) solid;
  border-radius: 100%;
  width: 337px;
}

.upper-icon,
.lower-icon {
  font-size: 60px;
  width: inherit;
  height: 110px;
  text-align: center;
  line-height: 0.2px;
}

.icon-flex {
  display: flex;
  width: 100px;
  flex-wrap: wrap;
  justify-content: center;
}

.upper-icon a,
.lower-icon a {
  text-decoration: none;
  background-color: inherit;
  color: inherit;
}

.upper-icon {
  align-self: flex-start;
}

.lower-icon {
  height: 150px;
  align-self: flex-end;
}

.icon-text {
  font-size: 15px;
  line-height: inherit;
}

.fa-brands {
  margin-top: 8px;
}

.fa-solid {
  margin-top: 26px;
}

.fa-solid2 {
  margin-top: 11px;
}

.about-me,
.present-work,
.future-work,
.past-work {
  padding: 0 120px;
}

.about-me {
  animation: fadedown 1s ease-in 3s forwards;
}

.present-work {
  animation: fadedown 1s ease-in 4s forwards;
}

#emojis1 {
  margin: 0;
  width: 25%;
  font-size: 90px;
}

.present-work-block,
.future-work-block {
  display: flex;
  gap: 10px;
}

.present-work-block img {
  width: 250px;
  height: 250px;
}

.divider1 {
  margin-top: 75px;
}

.future-work {
  animation: fadedown 1s ease-in 5s forwards;
}

.past-work {
  animation: fadedown 1s ease-in 6s forwards;
}

.project-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 20px;
}

.project-item {
  font-size: 20px;
  width: 26.7%;
  height: 212.5px;
  padding: 30px;
  background-color: black;
  color: rgb(255, 255, 255, 0.85);
  border: 2px solid rgb(255, 255, 255, 0.85);
}

.project-item a {
  text-decoration: none;
  color: inherit;
}

.project-item a:hover {
  text-decoration: underline;
}

.project-item a:visited {
  color: inherit;
}

.project-desc {
  min-height: 104px;
  display: inline-block;
}

@media only screen and (min-width: 1023px) and (max-width: 1804px) {
  .intro {
    flex-wrap: nowrap;
  }

  .project-item {
    width: 40%;
  }

  .present-work img {
    width: 350px;
    height: 350px;
  }
}

@media only screen and (min-width: 415px) and (max-width: 1024px) {
  .top-image {
    margin: 0;
  }

  #pwp1 {
    width: 70%;
    margin: 0;
  }

  #pwb1 {
    flex-direction: row;
  }

  .self-picture {
    order: 1;
    margin: 20px;
  }

  .languages {
    order: 2;
  }

  .interests {
    order: 3;
  }

  .present-work-block,
  .future-work-block {
    flex-direction: column;
  }

  .about-me,
  .present-work,
  .future-work,
  .past-work {
    padding: 0 80px;
  }

  .present-work-block img,
  .future-work-block img {
    width: inherit;
    height: auto;
  }

  .past-work {
    padding: 0 30px;
  }

  .project-item {
    width: 70%;
  }
}

@media only screen and (max-width: 415px) {
  body {
    color: green;
  }

  .top-image {
    margin: 0;
  }

  p {
    text-align: center;
  }

  .languages {
    order: 2;
  }

  .interests {
    order: 3;
  }

  .self-picture {
    order: 1;
    width: inherit;
    margin-bottom: 20px;
    grid-template-rows: 100px 340px 100px;
    grid-template-columns: 340px;
  }

  .icon-flex {
    width: 340px;
    justify-content: space-between;
  }

  .upper-icon,
  .lower-icon {
    width: 125px;
  }

  .icon-text {
    line-height: 15px;
  }

  .fas {
    margin-top: 14px;
  }

  #email-text {
    padding: 4px;
  }

  .about-me,
  .present-work,
  .future-work,
  .past-work {
    padding: 0 22px;
  }

  .present-work-block,
  .future-work-block {
    flex-direction: column;
  }

  .present-work-block img,
  .future-work-block img {
    width: inherit;
  }

  .future-work-block p {
    width: inherit !important;
  }

  .present-work-block img,
  .future-work-block img {
    width: 88vw;
  }

  .project-item {
    height: 260px;
  }
}

